--- a/stylehome.css
+++ b/stylehome.css
@@ -22,7 +22,7 @@ body {
 
 .primary-nav {
     background-color: var(--dkblue);
-    color: #89CFF0;
+    color: babyblue;
     padding: 10px;
     font-size: 60px;
     margin: 5px;
@@ -40,7 +40,6 @@ body {
 }
 
 .primary-nav__link:hover {
-    background-color: white;
     color: #89CFF0;
     text-shadow: 20px 20px var(--dkblue);
 }
