--- a/stylehome.css
+++ b/stylehome.css
@@ -41,5 +41,5 @@ body {
 
 .primary-nav__link:hover {
     color: #89CFF0;
-    text-shadow: 20px 20px white;
+    text-shadow: 20px 20px var(--cream);
 }
