--- a/stylehome.css
+++ b/stylehome.css
@@ -27,7 +27,7 @@ body {
     padding: 10px;
     font-size: 60px;
     margin: 5px;
-    font-family: "Bebas Neue";
+    font-family: 'Bebas Neue';
 }
 
 .primary-nav__list {
