--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ ul {
 h1, pre {
     float:left;
     clear: none;
-    color: #FFCD01;
+    color: #FFBA01;
     font-size:80px;
     font-family: 'Bebas Neue';
 }
