--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ ul {
 
 h1, pre {
     float:left;
-    clear: none;
+    clear: right;
     color: #FFBA01;
     font-size:80px;
     font-family: 'Bebas Neue';
